[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citybikes-hyper"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = { "text" = "AGPL-3.0" }
keywords = []
authors = [
  { name = "eskerda", email = "eskerda@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pybikes @ git+https://github.com/eskerda/pybikes",
  "pyzmq",
  "apscheduler",
  "starlette",
  "uvicorn",
]

[project.urls]
Documentation = "https://github.com/citybikes/hyper#readme"
Issues = "https://github.com/citybikes/hyper/issues"
Source = "https://github.com/citybikes/hyper"

[project.scripts]
hyper = "citybikes.hyper:cli.main"

[tool.hatch.version]
path = "src/citybikes/hyper/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/citybikes"]

[tool.hatch.envs.test]
extra-dependencies = [
  "pytest",
  "pytest-asyncio"
]
